attempted fix for hover problems on mobile

--- a/src/components/HomePage/Section3/section3.module.css
+++ b/src/components/HomePage/Section3/section3.module.css
@@ -91,7 +91,8 @@
 @media only screen and (max-width: 850px) {
   .section3 {
     font-family: "Righteous", cursive;
-
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
   }
 
   .portfolioh3tag {
